# erf8_analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  combine_sparams.py  dev.sh  main.py  plot_sparams.yaml  pyproject.toml
dl-util/: .s2j-state.json  dl.ps1  dl.sh  index.html  repo_url.txt
src/: plot_sparams.py
src_web/cable_analysis/: index.html  package.json
src_web/cable_analysis/src/: App.svelte
src_web/cable_analysis/src/lib/: Wizard.svelte
